<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsArticleActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/articleimg"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="37dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/news_title"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/articleAuthor"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="37dp"
                android:text="@string/author"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/articleDate"
                android:layout_width="241dp"
                android:layout_height="24dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="133dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/articleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>